Update 'bumwg0j4i-python' component image to: quay.io/rhtap_qe/rhtap-qe:9d49b88b23a1267d61c38fc75a4f1a6ad867593c@sha256:9ab043f04067d64cd73361bad976df76431579eb6557dd7031d0831c3cd7821f

--- a/components/bumwg0j4i-python/overlays/development/deployment-patch.yaml
+++ b/components/bumwg0j4i-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bumwg0j4i-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:9d49b88b23a1267d61c38fc75a4f1a6ad867593c@sha256:9ab043f04067d64cd73361bad976df76431579eb6557dd7031d0831c3cd7821f
+          name: container-image
